# src/modules/cloud-api/table-view/dto/request/toggle-share-table-view.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsBoolean } from 'class-validator';
+
+export class ToggleShareTableViewDto {
+  @ApiProperty({ description: 'Whether the view should be visible to all users', example: true })
+  @IsBoolean()
+  isShared: boolean;
+}
